cmake_minimum_required(VERSION 3.16)
project(Problems)

set(CMAKE_CXX_STANDARD 17)

add_executable(Problems InterviewBit/main.cpp InterviewBit/DistinctSubsequences.h InterviewBit/DistinctSubsequences.cpp InterviewBit/ConvertSortedListToBST.cpp InterviewBit/ConvertSortedListToBST.h InterviewBit/PalindromePartitioningII.cpp InterviewBit/PalindromePartitioningII.h InterviewBit/MinJumpArray.cpp InterviewBit/MinJumpArray.h)