cmake_minimum_required(VERSION 3.16)
project(Problems)

set(CMAKE_CXX_STANDARD 17)

add_executable(Problems Others/GameOfThrones.cpp Leetcode/IncreasingTripletSubsequence.cpp Leetcode/RangeAddition2.cpp Leetcode/UniqueNumberOfOccurrences.cpp Leetcode/MinimumNumberOfOperationsToMoveAllBallsToEachBox.cpp Leetcode/ValidateBinarySearchTree.cpp Leetcode/AddTwoNumbers.cpp Leetcode/ProductOfArrayExceptSelf.cpp Leetcode/MinimumAbsoluteDifference.cpp Leetcode/DesignUndergroundSystem.cpp "Leetcode/Sqrt(x).cpp")